# bevy-common-systems

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  LESSONS.md  README.md  about.hbs  about.toml  flake.nix
.cargo/: config.toml
.github/workflows/: ci.yml  pages.yml  release-flow.yaml
assets/bastion/: catalog.json
assets/sounds/: README.md
bevy_common_systems_macros/: Cargo.toml
bevy_common_systems_macros/src/: lib.rs
docs/: 2026-07-03-agents-md-and-claude-md.md  2026-07-03-dropzone-example.md  2026-07-03-fruitninja-touch-input.md  2026-07-03-orbit-runner.md  2026-07-03-test-memory.md  2026-07-04-asteroids-example.md  2026-07-04-bastion-example.md  2026-07-04-camera-shake-module.md  2026-07-04-dropzone-hazards.md  2026-07-04-dropzone-tier-a-fun.md  2026-07-04-feedback-flash-module.md  2026-07-04-feedback-screen-flash-module.md  2026-07-04-modding-json-registry.md  2026-07-04-overload-example.md  2026-07-04-overload-touch-controls.md  2026-07-04-pages-deploy-retry.md  2026-07-04-reactor-touch-controls.md  2026-07-04-ui-popup-module.md  2026-07-05-13glide-ui-juice-harvest.md  2026-07-05-bastion-data-catalog.md  2026-07-05-breach-example.md  2026-07-05-breach-fun-pass.md  2026-07-05-defaultplugins-doctest-headless-fix.md  2026-07-05-fps-controller-harvest.md  2026-07-05-glide-example.md  2026-07-05-glide-solver.md  2026-07-08-direction-materials.md  2026-07-08-integrity-and-destructible-promotion.md  LESSONS.md  README.md  dev-harness.md  wasm-web-builds.md
docs/plans/: README.md
docs/retros/: 20260703-095339-doctests-clippy.md  20260703-101712-chase-ascii.md  20260703-103940-ci-workflow.md  20260703-110851-explode-example.md  20260703-110915-slicer-hardening.md  20260703-114259-fruitninja-example.md  20260703-121418-menu-states.md  20260703-132210-floating-popup.md  20260703-132214-combo.md  20260703-140239-variety.md  20260703-140242-high-score.md  20260703-140243-combo-window.md  20260703-140246-combo-summary.md  20260703-140247-combo-hud.md  20260703-140248-cursor.md  20260703-140249-menu-pulse.md  20260703-150200-bevy-019-migration.md  20260703-152619-fruitninja-sounds.md  20260703-153128-embed-size-title.md  20260703-163329-web-audio-autoplay.md  20260703-165427-orbit-runner.md  20260703-165432-dropzone-example.md  20260703-165439-modding-json-registry.md  20260703-170744-asteroids-example.md  20260703-173128-fruitninja-touch.md  20260703-200005-safari-audio-unlock.md  20260703-212303-ios-media-channel.md  20260703-213510-dropzone-tune.md  20260703-web-showcase-gotchas.md  20260704-101608-pages-deploy-retry.md  20260704-103517-dropzone-touch-controls.md  20260704-103544-dropzone-tier-a-fun.md  20260704-103553-dropzone-hazards.md  20260704-133319-overload-asteroids-touch.md  20260704-134500-camera-shake-module.md  20260704-134530-ui-popup-module.md  20260704-134600-feedback-flash-module.md  20260704-134630-tween.md  20260704-134700-persist.md  20260704-134730-time-cooldown.md  (+36 more)
docs/spikes/: 20260704-134035-game-juice-and-scaffolding-kit.md  20260704-161210-input-and-projection-harvest.md  20260704-175058-dev-harness-and-app-scaffolding.md  20260704-220530-new-prototype-game-ideas.md  20260705-090421-ui-forward-slide-merge-puzzle.md  20260705-132024-breach-fun-pass.md
examples/: 03_modding.rs  05_explode.rs  06_fruitninja.rs  07_orbit.rs  08_dropzone.rs  09_reactor.rs  10_asteroids.rs  11_overload.rs  12_bastion.rs  13_glide.rs  14_breach.rs  15_integrity.rs  16_direction.rs
scripts/: check-ascii.sh  gen-licenses.sh  gen-placeholder-sounds.py
src/: completion.rs  lib.rs  material.rs
src/audio/: mod.rs  registry.rs
src/camera/: chase.rs  mod.rs  post.rs  project.rs  shake.rs  skybox.rs  wasd.rs
src/debug/: inspector.rs  mod.rs  wireframe.rs
src/feedback/: flash.rs  mod.rs  screen_flash.rs
src/health/: mod.rs
src/helpers/: despawn.rs  mod.rs  pointer.rs  temp.rs
src/input/: cursor.rs  mod.rs  pointer.rs  state.rs
src/integrity/: blast.rs  components.rs  mod.rs  plugin.rs  test_support.rs
src/material/: direction.rs  mod.rs
src/mesh/: builder.rs  explode.rs
src/meth/: mod.rs
src/modding/: events.rs  mod.rs  registry.rs
src/persist/: backend.rs  mod.rs
src/physics/: doom_controller.rs  mod.rs  pd_controller.rs  rigid_body.rs
src/scoring/: high_score.rs  mod.rs  streak.rs
src/time/: cooldown.rs  mod.rs
src/tween/: mod.rs
src/ui/: animate.rs  health_display.rs  menu.rs  mod.rs  objectives.rs  popup.rs  status.rs  touchpad.rs
tasks/20260703-000001/: TASK.md
tasks/20260703-000003/: TASK.md
tasks/20260703-094842/: RETRO.md  REVIEW.md  TASK.md
tasks/20260703-095339/: REVIEW.md  TASK.md
tasks/20260703-095509/: RETRO.md  REVIEW.md  TASK.md
tasks/20260703-101712/: REVIEW.md  TASK.md
tasks/20260703-103940/: REVIEW.md  TASK.md
tasks/20260703-110851/: REVIEW.md  TASK.md
tasks/20260703-110915/: REVIEW.md  TASK.md
tasks/20260703-114259/: REVIEW.md  TASK.md
tasks/20260703-121347/: RETRO.md  REVIEW.md  TASK.md
tasks/20260703-121414/: RETRO.md  REVIEW.md  TASK.md
tasks/20260703-121418/: REVIEW.md  TASK.md
tasks/20260703-132207/: RETRO.md  REVIEW.md  TASK.md
tasks/20260703-132210/: REVIEW.md  TASK.md
tasks/20260703-132214/: REVIEW.md  TASK.md
tasks/20260703-140237/: RETRO.md  REVIEW.md  TASK.md
tasks/20260703-140238/: RETRO.md  REVIEW.md  TASK.md
tasks/20260703-140239/: REVIEW.md  TASK.md
tasks/20260703-140240/: RETRO.md  REVIEW.md  TASK.md
tasks/20260703-140241/: RETRO.md  REVIEW.md  TASK.md
tasks/20260703-140242/: REVIEW.md  TASK.md
tasks/20260703-140243/: REVIEW.md  TASK.md
tasks/20260703-140244/: RETRO.md  REVIEW.md  TASK.md
tasks/20260703-140246/: REVIEW.md  TASK.md
tasks/20260703-140247/: REVIEW.md  TASK.md
tasks/20260703-140248/: REVIEW.md  TASK.md
tasks/20260703-140249/: REVIEW.md  TASK.md
tasks/20260703-143615/: RETRO.md  REVIEW.md  TASK.md
tasks/20260703-144934/: RETRO.md  REVIEW.md  TASK.md
tasks/20260703-144936/: RETRO.md  (+2 more)
web/: .gitignore  README.md  eslint.config.mjs  markdown.js  package-lock.json  package.json  tsconfig.json  webpack-partials.js  webpack.config.js
(+340 files in other folders)
