[package]
name = "bevy_common_systems"
version = "0.0.1"
edition = "2021"
description = "Common systems and utilities for Bevy-based projects"

[dependencies]
avian3d = { version = "0.7" }
bevy = { version = "0.19.0" }
bevy_enhanced_input = { version = "0.26.0" }
rand = { version = "0.9.2" }
serde_json = { version = "1.0.145" }
serde = { version = "1.0.228" }
bevy-inspector-egui = { version = "0.37", optional = true }
noise = { version = "0.9" }
bevy_common_systems_macros = { path = "./bevy_common_systems_macros" }

[dev-dependencies]
clap = { version = "4.5.48", features = ["derive"] }
bevy_asset_loader = { version = "0.27.0" }
# Enable the WAV decoder for examples/tests only (the 06_fruitninja sound
# effects ship as WAV placeholders). The library keeps bevy's default features,
# and vorbis stays default-on so .ogg assets also work.
bevy = { version = "0.19.0", features = ["wav"] }

# On wasm, getrandom 0.3 needs its JS backend enabled so `rand` works in the
# browser. This only enables a feature on an existing transitive dependency;
# native builds are unaffected. Pair with the rustflag in .cargo/config.toml.
[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.3", features = ["wasm_js"] }

[features]
debug = ["avian3d/diagnostic_ui", "bevy/track_location", "bevy-inspector-egui"]
dev = ["debug"]

[lints.clippy]
type_complexity = "allow"
too_many_arguments = "allow"
