[package]
name = "bevy_common_systems"
version = "0.19.1"
edition = "2021"
description = "Common systems and utilities for Bevy-based projects"
license = "MIT"
homepage = "https://github.com/alexjercan/bevy-common-systems"
repository = "https://github.com/alexjercan/bevy-common-systems"
# Distributed as a git dependency, never published to crates.io. `publish = false`
# also marks it first-party so cargo-about's `[private] ignore` keeps it out of
# the third-party license manifest. The version tracks Bevy's minor (0.19.x).
publish = false

[dependencies]
avian3d = { version = "0.7" }
bevy = { version = "0.19.0" }
bevy_enhanced_input = { version = "0.26.0" }
rand = { version = "0.9.2" }
serde_json = { version = "1.0.145" }
serde = { version = "1.0.228" }
bevy-inspector-egui = { version = "0.37", optional = true }
noise = { version = "0.9" }
bevy_common_systems_macros = { path = "./bevy_common_systems_macros" }

# Native persistence (persist module): the OS data directory for the save file.
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
dirs = "6"

[dev-dependencies]
clap = { version = "4.5.48", features = ["derive"] }
bevy_asset_loader = { version = "0.27.0" }
# Enable the WAV decoder for examples/tests only (the 06_fruitninja sound
# effects ship as WAV placeholders). The library keeps bevy's default features,
# and vorbis stays default-on so .ogg assets also work.
bevy = { version = "0.19.0", features = ["wav"] }

# On wasm, getrandom 0.3 needs its JS backend enabled so `rand` works in the
# browser. This only enables a feature on an existing transitive dependency;
# native builds are unaffected. Pair with the rustflag in .cargo/config.toml.
# web-sys (Storage/Window) backs the persist module's localStorage backend; it
# is a transitive bevy dependency, so this only enables the features we need.
[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.3", features = ["wasm_js"] }
web-sys = { version = "0.3", features = ["Window", "Storage"] }

[features]
debug = ["avian3d/diagnostic_ui", "bevy/track_location", "bevy-inspector-egui"]
dev = ["debug"]

[lints.clippy]
type_complexity = "allow"
too_many_arguments = "allow"

# Cap the peak RAM of `cargo test` / `cargo build`. Both build the lib unittest
# plus one binary per example, and each statically links the whole Bevy/avian
# engine. With the default embedded, full debuginfo each output binary is
# ~1.5 GB (almost all DWARF), and cargo links up to one-per-core in parallel, so
# rust-lld held many multi-GB binaries at once: peak ~38 GB on a 32 GB machine,
# which thrashed swap ("uses the entire RAM").
#
# Two knobs, both measured on this repo (see tasks/20260703-000003/NOTES.md):
#   split-debuginfo = "unpacked"  -> DWARF stays in the .o files instead of being
#     copied through the linker into the executable. Full debug info is retained;
#     linked binary drops to ~350 MB; peak ~19.7 GB.
#   debug = "line-tables-only"    -> keep file/line for backtraces but drop local
#     variables; binary ~300 MB; peak ~16.5 GB. This crate debugs at runtime via
#     bevy-inspector-egui rather than gdb, so losing locals costs nothing here.
# To restore full local-variable debugging, set `debug = true` (peak ~19.7 GB).
[profile.dev]
split-debuginfo = "unpacked"
debug = "line-tables-only"
