[package]
name = "bevy_common_systems_macros"
version = "0.19.1"
edition = "2021"
description = "Procedural macros for Bevy common systems"
license = "MIT"
# First-party: distributed as part of bevy_common_systems, never published.
# `publish = false` keeps it out of cargo-about's third-party license manifest.
publish = false

[lib]
proc-macro = true

[dependencies]
quote = "1"
syn = { version = "2", features = ["full"] }
proc-macro2 = "1"
